Fixed logo not centred

--- a/style.css
+++ b/style.css
@@ -11,20 +11,20 @@
     flex-flow: row wrap;
     
     /* Then we define how is distributed the remaining space */
-    justify-content: center;
+    justify-content: space-evenly;
     
     padding: 0;
     margin: 0;
     list-style: none;
     align-items: flex-end;
-    gap: 30px;
+    gap: 1vw;
   }
   
   .flex-item {
     padding: 4px;
     margin-top: 10px;
     line-height: 150px;
-    font-size: 4em;
+    font-size: 8vw;
     text-align: center;
     font-family: Vanguard;
   }
@@ -71,7 +71,7 @@ a {
   text-decoration: none; /* Per i link, in modo da non mettere la sottolineatura sotto*/
   color: white;
   font-family: Vanguard;
-  font-size: 3vw;
+  font-size: 5vw;
 }
 
 a:hover {
@@ -123,7 +123,7 @@ footer {
 }
 
 .mainIcon {
-  width: 200;  /* Use 'width' for resizing */
+  width: 20vw;  /* Use 'width' for resizing */
   height: auto; /* Maintain aspect ratio */
 }
 
@@ -147,7 +147,7 @@ footer {
 
   .flex-container {
     align-items: center; /* Ensure items are centered vertically */
-    justify-content: center;
+    justify-content: space-evenly;
   }
 
   .vwImmageSizeble {
